--- a/en/index.html
+++ b/en/index.html
@@ -84,7 +84,10 @@ window.Quarto = {
 };
 </script><meta property="og:title" content="STT-2200: Data Analysis">
 <meta property="og:description" content="Website for STT-2200">
+<meta property="og:image" content="https://stt2200.netlify.app/include/data_trap.png">
 <meta property="og:site_name" content="STT-2200: Data Analysis">
+<meta property="og:image:height" content="275">
+<meta property="og:image:width" content="275">
 </head>
 <body class="nav-sidebar floating quarto-light">
 <script id="quarto-html-before-body" type="application/javascript">
@@ -608,7 +611,13 @@ window.Quarto = {
 
 </header><p>Welcome everyone to the class STT-2200 in Autumn 2025.</p>
 <p>You will find on this website every necessary information for the modules, the practicals and the exams. The contents will be updated during the session with the answers to some work. I invite you to skim through the differents modules before classes.</p>
-<p>This is <a href="https://quarto.org/docs/websites">Quarto</a>.</p>
+<p>This website has been created with the help of Aurélien Nicosia and Thierry Duchesne notes.</p>
+<p>This website a been built using <a href="https://quarto.org/docs/websites">Quarto</a>.</p>
+<p>Most of the contents has been translated using <a href="https://www.deepl.com/en/translator">DeepL</a>.</p>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure"><p><img src="./include/data_trap.png" class="img-fluid figure-img"></p>
+<figcaption>Data trap (<a href="https://xkcd.com/2582/">xkcd:2582</a>).</figcaption></figure>
+</div>
 
 
 
