--- a/en/informations/general.html
+++ b/en/informations/general.html
@@ -592,11 +592,20 @@ window.Quarto = {
 </nav><div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
-    <div class="quarto-alternate-formats">
+        <nav id="TOC" role="doc-toc" class="toc-active"><h2 id="toc-title">On this page</h2>
+   
+  <ul>
+<li><a href="#stt-2200-data-analysis" id="toc-stt-2200-data-analysis" class="nav-link active" data-scroll-target="#stt-2200-data-analysis">STT-2200: Data Analysis</a></li>
+  <li><a href="#contact-details-and-availability" id="toc-contact-details-and-availability" class="nav-link" data-scroll-target="#contact-details-and-availability">Contact details and availability</a></li>
+  </ul>
+<div class="toc-actions"><ul>
+<li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Report an issue</a></li>
+<li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/informations/general.qmd" class="toc-action"><i class="bi empty"></i>View source</a></li>
+</ul></div>
+<div class="quarto-alternate-formats">
 <h2>Other Formats</h2>
 <ul><li><a href="general.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul>
-</div>
+</div></nav>
 </div>
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb">
@@ -619,10 +628,55 @@ window.Quarto = {
 
 </header><p><strong>Faculté des sciences et de génie</strong></p>
 <p>Département de mathématiques et de statistique</p>
+<section id="stt-2200-data-analysis" class="level2"><h2 class="anchored" data-anchor-id="stt-2200-data-analysis">STT-2200: Data Analysis</h2>
+<p>Teaching format: Face-to-face</p>
+<p>Time spent:</p>
+<ul>
+<li>Lecture: 2h</li>
+<li>Laboratory: 1h</li>
+<li>Personal work: 6h</li>
+<li>Total: 9h</li>
+</ul>
+<p>Credits: 3</p>
+<p>Prerequisites:</p>
+<ul>
+<li>ACT-2000 or STT-1000 or STT-1300 or STT-1900</li>
+<li>MAT-1200 or ACT-2002</li>
+<li>STT-1100 or IFT-4902 or ECN-2090 or GLO-1901 or IFT-1004</li>
+</ul>
+<p>Time range:</p>
+<table class="caption-top table">
+<thead><tr class="header">
+<th>Type</th>
+<th>Day</th>
+<th>Time</th>
+<th>Dates</th>
+</tr></thead>
+<tbody>
+<tr class="odd">
+<td>Lab</td>
+<td>Tuesday</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td>Class</td>
+<td>Friday</td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table></section><section id="contact-details-and-availability" class="level2"><h2 class="anchored" data-anchor-id="contact-details-and-availability">Contact details and availability</h2>
+<p>Teacher: Steven Golovkine</p>
+<p>Local: VCH-2209</p>
+<p>Email: <a href="mailto:steven.golovkine@mat.ulaval.ca">steven.golovkine@mat.ulaval.ca</a></p>
+<p>Availability: I am available to meet with you by appointment by email or without appointment from Monday to Thursday between 8am and 10am.</p>
+<p style="“font-size:10px;”">
+The University recognizes the right to disconnect of professors, lecturers and other teaching staff. This means that they are not required to check messages sent to them (email, voicemail, forum messages, etc.) during evenings, weekends and vacations. The person who has sent a message during these periods should therefore expect to receive a reply within a reasonable time, calculated from the resumption of normal working hours.
+</p>
 
 
-
-</main><!-- /main --><script>
+</section></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
@@ -1258,7 +1312,7 @@ window.onload = function() {
     </div>   
     <div class="nav-footer-center">
 <p>2025 | <strong>Steven Golovkine</strong> | <a class="link-footer" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
-<div class="toc-actions"><ul>
+<div class="toc-actions d-sm-block d-md-none"><ul>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Report an issue</a></li>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/informations/general.qmd" class="toc-action"><i class="bi empty"></i>View source</a></li>
 </ul></div>
