--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@ window.Quarto = {
 };
 </script><meta property="og:title" content="STT-2200: Analyse de données">
 <meta property="og:description" content="">
+<meta property="og:image" content="https://stt2200.netlify.app/include/data_trap.png">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
+<meta property="og:image:height" content="275">
+<meta property="og:image:width" content="275">
 </head>
 <body class="nav-sidebar floating quarto-light">
 <script id="quarto-html-before-body" type="application/javascript">
@@ -607,8 +610,13 @@ window.Quarto = {
 
 
 </header><p>Bienvenue à tous au cours STT-2200 de l’automne 2025.</p>
-<p>Vous trouverez sur ce site toute les informations nécessaire pour les cours, les différents travaux et les exams. Les contenus seront mis à jour au cours de la session avec les corrigés de certains travaux. Je vous invite à regarder les différents modules avant les cours.</p>
+<p>Vous trouverez sur ce site toute les informations nécessaire pour les cours, les différents travaux et les examens. Les contenus seront mis à jour au cours de la session avec les corrigés de certains travaux. Je vous invite à regarder les différents modules avant les cours.</p>
+<p>Ce site a été créé en s’aidant des notes de cours de Aurélien Nicosia et de Thierry Duchesne.</p>
 <p>Ce site a été créé avec <a href="https://quarto.org/docs/websites">Quarto</a>.</p>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure"><p><img src="./include/data_trap.png" class="img-fluid figure-img"></p>
+<figcaption>Data trap (<a href="https://xkcd.com/2582/">xkcd:2582</a>).</figcaption></figure>
+</div>
 
 
 
